--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <meta name="theme-color" content="#111"/>
 
 <style>
+html, body {
+    overflow: hidden;
+    height: 100%;
+    background:#e5e5e5;
+}
 body{
     margin:0;
     font-family:Arial;
@@ -75,4 +80,5 @@ if('serviceWorker' in navigator){
 </script>
 
 </body>
+
 </html>
